[gd_scene load_steps=3 format=3 uid="uid://rest_scene"]

[ext_resource type="PackedScene" path="res://ui/PartyPanel.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/Rest.gd" id="2"]

[node name="Rest" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="PartyPanel" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 0
anchor_right = 1.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.32
anchor_right = 0.68
anchor_top = 0.25
anchor_bottom = 0.75
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="InfoLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
text = "Rest options"

[node name="ResultLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
text = ""

[node name="HealHPButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Heal HP"

[node name="HealMPButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Heal MP"

[node name="SmithButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Forge Equipment"

[node name="SmithContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
visible = false

[node name="SmithInfo" type="Label" parent="VBox/SmithContainer"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
text = "Select equipment to upgrade"

[node name="SmithSelect" type="OptionButton" parent="VBox/SmithContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SmithButtons" type="HBoxContainer" parent="VBox/SmithContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="SmithConfirm" type="Button" parent="VBox/SmithContainer/SmithButtons"]
layout_mode = 2
size_flags_horizontal = 2
text = "Upgrade"

[node name="SmithCancel" type="Button" parent="VBox/SmithContainer/SmithButtons"]
layout_mode = 2
size_flags_horizontal = 2
text = "Cancel"
